--- a/liveagent.html
+++ b/liveagent.html
@@ -74,5 +74,9 @@
             initESW('https://service.force.com');
           }
         </script>
+        <script type='text/javascript' src='https://c.la2-c1cs-fra.salesforceliveagent.com/content/g/js/56.0/deployment.js'></script>
+<script type='text/javascript'>
+liveagent.init('https://d.la2-c1cs-fra.salesforceliveagent.com/chat', '5723O00000000vl', '00D3O0000008poO');
+</script>
     </body>
 </html>
