Testing offline removal

--- a/liveagentci01.html
+++ b/liveagentci01.html
@@ -61,7 +61,7 @@
 					"displayToAgent":true
 				}, {
 					"label":"ERP Customer Id",
-					"value":"SAI9999999",     /* Placeholder - To be completed in Magento */
+					"value":"SAI000008",     /* Placeholder - To be completed in Magento */
 					"displayToAgent":true
 				}]; 
 
@@ -90,7 +90,7 @@
 						buttonId: '5733O0000004Cnb',
 						baseLiveAgentURL: 'https://d.la2-c1cs-fra.salesforceliveagent.com/chat',
 						eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I3O00000000epUAA_18369c56334',
-						isOfflineSupportEnabled: true
+						isOfflineSupportEnabled: false
 					}
 				);
 			};
