--- a/liveagentci01.html
+++ b/liveagentci01.html
@@ -49,7 +49,7 @@
 				
 				embedded_svc.settings.extraPrechatFormDetails = [{
 					"label":"First Name",
-					"value":"Andres",           /* Placeholder - To be completed in Magento */
+					"value":"Robin",           /* Placeholder - To be completed in Magento */
 					"displayToAgent":true
 				}, {
 					"label":"Last Name",
@@ -77,6 +77,13 @@
 						"label":"ERP Customer Id"
 					}]
 				}];
+
+                embedded_svc.settings.prepopulatedPrechatFields = {
+                    FirstName: "Robin",
+                    LastName: "Iniesta",
+                    Email: "andres.iniesta@msc.com",
+                    Subject: "Testing prepopulating the info"
+                };
 
 				embedded_svc.init(
 					'https://sunnyeurope--ci01.sandbox.my.salesforce.com',
