--- a/liveagentci01.html
+++ b/liveagentci01.html
@@ -53,7 +53,7 @@
 					"displayToAgent":true
 				}, {
 					"label":"Last Name",
-					"value":"Iniesta",          /* Placeholder - To be completed in Magento */
+					"value":"Wijnen",          /* Placeholder - To be completed in Magento */
 					"displayToAgent":true
 				}, {
 					"label":"Email",
@@ -97,7 +97,7 @@
 						buttonId: '5733O0000004Cnb',
 						baseLiveAgentURL: 'https://d.la2-c1cs-fra.salesforceliveagent.com/chat',
 						eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I3O00000000epUAA_18369c56334',
-						isOfflineSupportEnabled: false
+						isOfflineSupportEnabled: true
 					}
 				);
 			};
