--- a/liveagentci01.html
+++ b/liveagentci01.html
@@ -80,7 +80,7 @@
 
                 embedded_svc.settings.prepopulatedPrechatFields = {
                     FirstName: "Robin",
-                    LastName: "Iniesta",
+                    LastName: "Wijnen",
                     Email: "andres.iniesta@msc.com",
                     Subject: "Testing prepopulating the info"
                 };
