--- a/liveagentci01.html
+++ b/liveagentci01.html
@@ -81,7 +81,7 @@
                 embedded_svc.settings.prepopulatedPrechatFields = {
                     FirstName: "Robin",
                     LastName: "Wijnen",
-                    Email: "andres.iniesta@msc.com",
+                    Email: "andres.iniesta@msc.com.offline",
                     Subject: "Testing prepopulating the info with another update"
                 };
 
