--- a/liveagentci01.html
+++ b/liveagentci01.html
@@ -1,117 +1,160 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- head definitions go here -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-	</head>
-	<body>
-		 <!-- the content goes here -->
-        <h1>Testing the chat</h1>
-		
-		<style type='text/css'>
-			.embeddedServiceHelpButton .helpButton .uiButton {
-				background-color: #0799B8;
-				font-family: "Salesforce Sans", sans-serif;
-			}
-			.embeddedServiceHelpButton .helpButton .uiButton:focus {
-				outline: 1px solid #0799B8;
-			}
-			@font-face {
-				font-family: 'Salesforce Sans';
-				src: url('https://c1.sfdcstatic.com/etc/clientlibs/sfdc-aem-master/clientlibs_base/fonts/SalesforceSans-Regular.woff') format('woff'),
-				url('https://c1.sfdcstatic.com/etc/clientlibs/sfdc-aem-master/clientlibs_base/fonts/SalesforceSans-Regular.ttf') format('truetype');
-			}
-		</style>
+  <head>
+    <!-- head definitions go here -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1"
+    />
+  </head>
+  <body>
+    <!-- the content goes here -->
+    <h1>Testing the chat</h1>
 
-		<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
-		<script type='text/javascript'>
-			var initESW = function(gslbBaseURL) {
-				embedded_svc.settings.displayHelpButton = true; //Or false
-				embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
+    <style type="text/css">
+      .embeddedServiceHelpButton .helpButton .uiButton {
+        background-color: #0799b8;
+        font-family: "Salesforce Sans", sans-serif;
+      }
+      .embeddedServiceHelpButton .helpButton .uiButton:focus {
+        outline: 1px solid #0799b8;
+      }
+      @font-face {
+        font-family: "Salesforce Sans";
+        src: url("https://c1.sfdcstatic.com/etc/clientlibs/sfdc-aem-master/clientlibs_base/fonts/SalesforceSans-Regular.woff")
+            format("woff"),
+          url("https://c1.sfdcstatic.com/etc/clientlibs/sfdc-aem-master/clientlibs_base/fonts/SalesforceSans-Regular.ttf")
+            format("truetype");
+      }
+    </style>
 
-				//embedded_svc.settings.defaultMinimizedText = 'Overwrite Label Test'; //(Defaults to Chat with an Expert)
-				//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
+    <script
+      type="text/javascript"
+      src="https://service.force.com/embeddedservice/5.0/esw.min.js"
+    ></script>
+    <script type="text/javascript">
+      var initESW = function (gslbBaseURL) {
+        embedded_svc.settings.displayHelpButton = true; //Or false
+        embedded_svc.settings.language = ""; //For example, enter 'en' or 'en-US'
 
-				//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
-				//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
+        //embedded_svc.settings.defaultMinimizedText = 'Overwrite Label Test'; //(Defaults to Chat with an Expert)
+        //embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
 
-				// Settings for Chat
-				//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
-					// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
-					// Returns a valid button ID.
-				//};
-				//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-				//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
-				//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
+        //embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
+        //embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
 
-				embedded_svc.settings.enabledFeatures = ['LiveAgent'];
-				embedded_svc.settings.entryFeature = 'LiveAgent';
-				
-				embedded_svc.settings.extraPrechatFormDetails = [{
-					"label":"First Name",
-					"value":"Robin",           /* Placeholder - To be completed in Magento */
-					"displayToAgent":true
-				}, {
-					"label":"Last Name",
-					"value":"Wijnen",          /* Placeholder - To be completed in Magento */
-					"displayToAgent":true
-				}, {
-					"label":"Email",
-					"value":"andres.iniesta@msc.com",   /* Placeholder - To be completed in Magento */
-					"displayToAgent":true
-				}, {
-					"label":"ERP Customer Id",
-					"value":"SAI000008",     /* Placeholder - To be completed in Magento */
-					"displayToAgent":true
-				}]; 
+        // Settings for Chat
+        //embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
+        // Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
+        // Returns a valid button ID.
+        //};
+        //embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
+        //embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
+        //embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
 
-				embedded_svc.settings.extraPrechatInfo = [{
-					"entityName":"Account",
-					"showOnCreate":true,
-					"saveToTranscript":"AccountId",
-					"entityFieldMaps": [{
-						"isExactMatch":true,
-						"fieldName":"zSUN_ERP_Customer_ID__c",
-						"doCreate":false,
-						"doFind":true,
-						"label":"ERP Customer Id"
-					}]
-				}];
+        embedded_svc.settings.enabledFeatures = ["LiveAgent"];
+        embedded_svc.settings.entryFeature = "LiveAgent";
 
-                embedded_svc.settings.prepopulatedPrechatFields = {
-                    FirstName: "Robin",
-                    LastName: "Wijnen",
-                    Email: "andres.iniesta@msc.com.offline",
-                    Subject: "Testing prepopulating the info with another update for offline"
-                };
+        embedded_svc.settings.extraPrechatFormDetails = [
+          {
+            label: "First Name",
+            value: "Robin" /* Placeholder - To be completed in Magento */,
+            displayToAgent: true,
+          },
+          {
+            label: "Last Name",
+            value: "Wijnen" /* Placeholder - To be completed in Magento */,
+            displayToAgent: true,
+          },
+          {
+            label: "Email",
+            value:
+              "andres.iniesta@msc.com" /* Placeholder - To be completed in Magento */,
+            displayToAgent: true,
+          },
+          {
+            label: "ERP Customer Id",
+            value: "SAI000008" /* Placeholder - To be completed in Magento */,
+            displayToAgent: true,
+          },
+        ];
 
-				embedded_svc.init(
-					'https://sunnyeurope--ci01.sandbox.my.salesforce.com',
-					'https://sunnyeurope--ci01.sandbox.my.site.com/',
-					gslbBaseURL,
-					'00D3O0000008r6W',
-					'zSUN_Sunny_Online_Webchat',
-					{
-						baseLiveAgentContentURL: 'https://c.la2-c1cs-fra.salesforceliveagent.com/content',
-						deploymentId: '5723O0000004D7C',
-						buttonId: '5733O0000004Cnb',
-						baseLiveAgentURL: 'https://d.la2-c1cs-fra.salesforceliveagent.com/chat',
-						eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I3O00000000epUAA_18369c56334',
-						isOfflineSupportEnabled: true
-					}
-				);
-			};
+        embedded_svc.settings.extraPrechatInfo = [
+          {
+            entityName: "Account",
+            showOnCreate: true,
+            saveToTranscript: "AccountId",
+            entityFieldMaps: [
+              {
+                isExactMatch: true,
+                fieldName: "zSUN_ERP_Customer_ID__c",
+                doCreate: false,
+                doFind: true,
+                label: "ERP Customer Id",
+              },
+            ],
+          },
+        ];
 
-			if (!window.embedded_svc) {
-				var s = document.createElement('script');
-				s.setAttribute('src', 'https://sunnyeurope--ci01.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js');
-				s.onload = function() {
-					initESW(null);
-				};
-				document.body.appendChild(s);
-			} else {
-				initESW('https://service.force.com');
-			}
-		</script>
-	</body>
+        embedded_svc.settings.prepopulatedPrechatFields = {
+          FirstName: "Robin",
+          LastName: "Wijnen",
+          Email: "andres.iniesta@msc.com.offline",
+          Subject:
+            "Testing prepopulating the info with another update for offline",
+        };
+
+        embedded_svc.init(
+          "https://sunnyeurope--ci01.sandbox.my.salesforce.com",
+          "https://sunnyeurope--ci01.sandbox.my.site.com/",
+          gslbBaseURL,
+          "00D3O0000008r6W",
+          "zSUN_Sunny_Online_Webchat",
+          {
+            baseLiveAgentContentURL:
+              "https://c.la2-c1cs-fra.salesforceliveagent.com/content",
+            deploymentId: "5723O0000004D7C",
+            buttonId: "5733O0000004Cnb",
+            baseLiveAgentURL:
+              "https://d.la2-c1cs-fra.salesforceliveagent.com/chat",
+            eswLiveAgentDevName:
+              "EmbeddedServiceLiveAgent_Parent04I3O00000000epUAA_18369c56334",
+            isOfflineSupportEnabled: true,
+          }
+        );
+      };
+
+      if (!window.embedded_svc) {
+        var s = document.createElement("script");
+        s.setAttribute(
+          "src",
+          "https://sunnyeurope--ci01.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js"
+        );
+        s.onload = function () {
+          initESW(null);
+        };
+        document.body.appendChild(s);
+      } else {
+        initESW("https://service.force.com");
+      }
+
+      !(function () {
+        let a = XMLHttpRequest.prototype.open;
+        XMLHttpRequest.prototype.open = function () {
+          this.addEventListener("load", (b) => {
+            let c = document.querySelector("input#SuppliedEmail");
+            if (c != null) {
+              document.querySelector(
+                'label[for="SuppliedEmail"]'
+              ).style.display = "none";
+              c.style.display = "none";
+              c.value = "test@hiddenemail.com";
+              c.dispatchEvent(new Event("change", { bubbles: !0 }));
+            }
+          });
+          a.apply(this, arguments);
+        };
+      })();
+    </script>
+  </body>
 </html>
