--- a/liveagentci01.html
+++ b/liveagentci01.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- the content goes here -->
-    <h1>Testing the chat</h1>
+    <h1>Testing the chat - Hidden field</h1>
 
     <style type="text/css">
       .embeddedServiceHelpButton .helpButton .uiButton {
